card size to avoid horizontal scroll

--- a/client/src/components/Info.css
+++ b/client/src/components/Info.css
@@ -1,7 +1,9 @@
 .info-container {
     padding: 20px;
+    margin: 0.5rem;
     border-radius: 15px;
     align-items: center;
+    width: 85vw;
 }
 
 .bird-card-list-container {
@@ -34,23 +36,26 @@
     border-radius: 5px;
 }
 
-
-.modal-box {
-    background-color: rgb(239, 239, 239);
-    border-radius: 30px;
+.modal-shiz {
+    
 }
-
 
 .modal {
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto;
+    /* grid-template-areas:
+        "title title title"
+        "info image image"
+        "close close close"; */
 }
 
 .modal-title h1{
+    /* grid-area: 'title'; */
     grid-area: 1 / 1 / 1 / 4 ;
+    /* grid-column: 1 / -1; */
     font-size: 5em;
-    /* background-color: blue; */
+    background-color: blue;
 }
 
 /* .bird-info {
@@ -63,40 +68,24 @@
 } */
 
 .bird-info-fact {
+    /* grid-area: "info"; */
     grid-area: 2 / 1 / 2 / 1 ;
-    /* background-color: rgb(255, 0, 204); */
+    background-color: rgb(255, 0, 204);
 }
 
 .bird-image {
+    /* grid-area: "image"; */
     grid-area: 2 / 3 / 2 / 4 ;
     max-width: 100%;
     max-height: auto;
-    /* background-color: rgb(98, 255, 0); */
+    background-color: rgb(98, 255, 0);
     
 }
 
 .close-modal{
     /* grid-area: "close"; */
-    grid-area: 1 / 4 / 1 / 3 ;
+    grid-area: 3 / 1 / 3 / 4 ;
     background-color: rgb(251, 255, 0);
-    padding: 50px;
-    margin-left: 20vw;
-    
-}
-
-.close-modal-btn {
-    padding: 1em;
-    border-radius: 20px;
-    font-size: 30px;
-
-}
-
-.close-modal-btn:hover {
-    cursor: pointer;
-}
-
-.close-modal-btn:active {
-    transform: translateY(4px)
 }
 
 
@@ -146,8 +135,4 @@
 #h2-header {
     margin-right: 5em;
     text-align: right;
-}
-
-.bird-card-name-back:hover {
-    cursor: pointer;
 }
